--- a/05 부분집합.md
+++ b/05 부분집합.md
@@ -10,10 +10,31 @@
               
 # 부분집합을 구하는 공식    
   
-1. 방문 체크 방식
-2. 
-3.
+1. 반복문을 이용한 방법
+2. 방문 체크 방식의 재귀함수
+3. 방문 체크 방식의 재귀함수
+4. next_permutaion 방식
 
+## 반복문으로 부분집합 만들기**   
+```
+FOR i in 1 -> 0
+    selected[i] <- i
+    FOR j in 1 -> 0
+        selected[2] <- j  
+	FOR k in 1 -> 0
+	    selected[3] <- k
+	    FOR m in 1 -> 3
+	        if selected[i] == 1 then
+		print i 
+	    END FOR
+	END FOR
+    END FOR
+END FOR
+```
+
+
+
+   
 ## 방문 체크 방식
 ```
 input[]		// 숫자 배열
@@ -143,20 +164,7 @@ public class SubSet2 {
 ```
 * 공집합은 제외했다.   
 
-### 반복문으로 부분집합 만들기**   
-```
-FOR i in 1 -> 0
-    selected[i] <- i
-    FOR j in 1 -> 0
-        selected[2] <- j  
-	FOR k in 1 -> 0
-	    selected[3] <- k
-	    FOR m in 1 -> 3
-	        if selected[i] == 1 then
-		print i 
 
-```
-   
 ## 바이너리 카운팅      
 * 원소 수에 해당하는 N개의 비트열을 이용한다.        
 * n번째 비트값이 1이면 n번째 원소가 포함되었음을 의미한다.      
