--- a/10 분할정복.md
+++ b/10 분할정복.md
@@ -36,3 +36,92 @@ Recursive_Power(x, n)
 나머지 연산을 한다음에 나온 값을 구하라는 문제이다.   
 예를 들어 ,10000007로 나눈 나머지 값을 출력해라 -> 나머지 먼저 하고 문제 풀기   
 
+## 분할정복을 사용하는 이유 
+필자가 생각하기에는 2가지가 존재한다.  
+         
+* 현재 영역에서 문제를 풀지 못했을 경우 그 처리를 분할하고 조합한 후로 미룰 때      
+* 계산식이 너무 많을 때 이를 적절히 분리하고 싶은 경우   
+
+## 문제 - 병뚜껑 속의 숫자 게임  
+술래가 병뚜껑 속 숫자를 확인한 후,   
+다음 사람부터 숫자를 맞히기 시작한다.   
+술래는 up 또는 down을 통해 게임에 참여한 사람들이 병뚜껑 속 숫자에 점점 가까워질 수 있도록 힌트를 제시한다.   
+
+**병뚜껑 속 숫자가 3인 경우**   
+* 첫번째 사람이 14를 외쳤다면 술래는 DOWN 
+* 두번째 사람이 2를 외쳤다면 술래는 UP  
+* 세번째 사람이 4를 외쳤다면 술래는 DOWN  
+* 결국 4번째 사람이 병뚜껑 속 숫자인 3을 부를수 밖에 없으므로 당첨 
+
+## 이진검색  
+자료의 **가운데에 있는 항목의 키 값과 비교하여 다음 검색의 위치를 결정하고 검색을 계속 진행하는 방법**     
+  
+* 목적 키를 찾을 때까지 이진 검색을 순환적으로 반복 수행함으로써 검색 범위를 반으로 줄여가면서 보다 빠르게 검색을 수행함  
+* 중요한 점은 어떤 범위를 버릴 것이냐는 연산과 확신이 있어야 한다.   
+
+이진 검색을 하기 위해서는 자료가 정렬된 상태여야 한다.    
+
+### 검색과정
+1. 자료의 중앙에 있는 원소를 고른다.
+2. 중앙 원소의 값과 찾고자 하는 목표값을 비교한다.  
+3. 중앙 원소의 값과 찾고자 하는 목표값이 일치하면 탐색을 끝낸다.  
+4. 목표값이 중앙 원소의 값보다 작으면 자료의 왼쪽 반에 대해서 새로 검색을 수행하고,   
+5. 크다면 자료의 오른쪽 반에 대해서 새로 검색을 수행한다.   
+6. 찾고자 하는 값을 찾을 때 까지 위의 과정을 반복한다,  
+   
+**반복 구조**
+```java
+
+binarySearch(s[], n , key)
+    start <- 0
+    end <- n-1
+
+    WHILE start <= end
+        mid <- (start + end)/2
+        IF S[mid] == key
+            return mid
+        ELSE S[mid] < key
+            start <- mid+1
+        ELSE S[mid] > key
+            end <- mid+1
+    END WHILE
+    RETURN -1      
+```
+
+```java
+package me.kwj1270.sample;
+
+public class BinarySearch {
+	
+	private static int binarySearch(int[] arr, int key) {
+		int start=0;
+		int end= arr.length-1;
+		
+		while (start <= end) {
+			int mid = (start+end)/2;
+			if(arr[mid] == key) return mid;
+			else if(arr[mid] < key) start = mid+1;
+			else if(arr[mid] > key) end = mid-1;		
+		}
+		return -1;
+	}
+	
+
+	private static int binarySearch(int[] arr, int start, int end, int key) {
+		if(start > end) {
+			return -1;
+		}
+		
+		int mid = (start+end)/2;
+		if(arr[mid] == key) return mid;
+		if(arr[mid] < key) return binarySearch(arr,start, mid, key);
+		if(arr[mid] > key) return binarySearch(arr,mid, end, key);
+									
+		return -1;
+	}
+	
+}
+```
+   
+  
+
