--- a/10 분할정복.md
+++ b/10 분할정복.md
@@ -91,7 +91,14 @@ binarySearch(s[], n , key)
 ```java
 package me.kwj1270.sample;
 
+import java.util.Arrays;
+
 public class BinarySearch {
+	public static void main(String[] args) {
+		int[] arr = {3, 11, 15, 20, 21, 29, 45};
+		Arrays.sort(arr);
+		System.out.println(binarySearch(arr, 29));
+	}
 	
 	private static int binarySearch(int[] arr, int key) {
 		int start=0;
@@ -107,6 +114,19 @@ public class BinarySearch {
 	}
 	
 
+	private static int binarySearch(int[] arr, int start, int end, int key) {
+		if(start <= end) {
+			int mid = (start+end)/2;
+			if(arr[mid] == key) return mid;
+			if(arr[mid] < key) return binarySearch(arr,start, mid, key);
+			if(arr[mid] > key) return binarySearch(arr,mid, end, key);	
+		}
+		
+		return -1;
+	}
+	
+	// 기저 조건 다르게
+	
 	private static int binarySearch(int[] arr, int start, int end, int key) {
 		if(start > end) {
 			return -1;
