--- a/10 분할정복.md
+++ b/10 분할정복.md
@@ -149,6 +149,20 @@ public class BinarySearch {
 }
 
 ```
-   
+     
+## 문제 - 방만들기   
+여러개의 정사각형 공간들로 이루어진 정사각형 모양의 공간이 주어졌고,      
+각 정사각형 공간들은 하얀색으로 칠해져 있거나 초록색으로 칠해져 있다,    
   
+주어진 공간을 일정한 규칙에 따라 나누어 다양한 크기를 갖는 정사각형 모양의 하얀색 또는 초록색 공간을 만들려고 한다.   
+  
+입력으로 주어진 공간의 한 변의 길이 N과 정사각형 공간의 색(흰/초)이 주어질때,        
+나누어진 하얀색 공간과 초록색 공간의 개수를 구하는 프로그램을 작성하시오      
+   
+**규칙**      
+전체 공간의 크기는 2의 배수 -> 2 4 8 16 32 64 128 -> 아에 분할로 풀라는 힌트     
+공간이 모두 같은 색으로 칠해져 있지 않으면, 가로 세로 중간 부분을 잘라서 똑같은 크기의 `N/2` * `N/2`로 나눈다.      
+나누어진 4개의 공간 각각에 대해서도 앞에서와 마찬가지로 모두 같은 색으로 칠해져 있지 않으면 같은 방법으로 똑같은 크기의 4개의 공간으로 나눈다.      
+이와 같은 과정을 나누어진 공간이 모두 하얀색 또는, 모두 초록색으로 칠해져 있거나, 하나의 정사각형 공간이 되어 더이상 나눌 수 없을 때까지 반복한다.    
+   
 
