--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -138,3 +138,13 @@ class BackTracking {
 }
 ```
 
+## 백트래킹과 완전 탐색 DFS과의 차이      
+* 어떤 노드에서 출발하는 경로가 해결책으로 이어질 것 같지 않으면 더 이상 그 경로를 따라가지 않음으로써 시도의 횟수를 줄인다.   
+* 완전탐색이 모든 경로를 추적하는데 비해 백트래킹은 불필요한 경로를 조기에 차단한다.  
+* 완전탐색을 가하기에는 경우의 수가 너무나 많다.     
+* 백트래킹 알고리즘을 적용하면 일반적으로 경우의 수가 줄어들지만 이 역시 최악의 경우에는 여전히 지수함수시간을 요하므로 처리 불가능할 수 있다.     
+    
+메모이제이션은 그 길에 대한 값을 가진 것이지만        
+백트래킹은 그 길 자체를 가지 말라고 말하는 것이다. 이를 가지치기라고 말한다.   
+
+
