--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -153,3 +153,20 @@ class BackTracking {
 * 같은 행에 퀸을 두지 않는 방식의 깊이 우선 탐색 : 155 
 * 백트래킹 : 27    
 
+# 정리
+백트래킹은 모든 가능한 경우의 수 중에서 특정한 조건을 만족하는 경우만 살펴보는 것  
+답이 될 만한지 판단하고 그렇지 않으면 그 부분까지 탐색하는 것을 하지 않고 가지치기 하는 것  
+주로 문제 풀이에서는 DFS로 모든 경우의 수를 탐색하는 과정에서, 조건으로 답이 절대로 될 수 없는 상황을 정의하여 체크하고,   
+그러한 상황일 경우에는 탐색을 중지시킨 뒤 그 이전으로 돌아가서 다시 다른 겨웅를 탐색하게끔 구현할 수 있다.   
+
+### 부분 집합의 합 문제 
+유한개의 정수로 이루어진 집합이 있을 때, 이 집합의 부분집합 중에서 그 집합의 원소를 모두 더한 값이 0이 되는 경우가 몇번이나 있는지를 알아내는 문제   
+예를 들어 `{-7 -3 -2 5 8}`라는 집합이 있을 때, `{-3 -2 5}`는 이 집합의 부분집합이면서  
+(-3) + (-2) + 5 = 0 이므로 이 경우의 답은 참이 된다.  
+완전 검색 기법으로 부분집합 합 문제를 풀기 위해서는, 우선 집합의 모든 부분집합을 생성한 후에 각 부분집합의 합을 계산해야 한다.   
+
+
+### 부분 집합의 합 문제2   
+유한개의 자연수로 이루어진 집합이 있을 때, 이 집합의 부분집합 중에서  
+그 집ㅎ바의 원소를 모두 더한 값이 21이 되는 경우가 몇번이나 있는지를 알아내는 문제   
+예를 들어, 5 21 11 16, 6 10 라는 집합이 있을때 5 6 10 는 집합의 부분집합이면서 21이므로 참이 된다  
