--- a/11 백트래킹.md
+++ b/11 백트래킹.md
@@ -174,3 +174,26 @@ class BackTracking {
 `중간에 값이 넘었다면`이라는 가지를 칠 수 있는 명분이 있다.        
 예를들어 난쟁이 문제도, 100을 초과하면 답이 될 수 없으니 가지를 칠 수 있다.   
 리팩토링!!! 백트래킹은 일반 재귀를 리팩토링 할 수 있다.  
+
+### 주의점 빵집문제 - 파이프  
+
+우리들은 대부분 2차원 배열 문제 
+
+* 시작점에서 부터 도착점의 모든 경우의 수    
+* 파이프의 최소 길이 구하는 경우
+* 한개의 파이프라인을 놓는데 가능한 경우의 수 
+
+이러한 문제를 푸는 경우가 많고 헷갈릴만하다.   
+      
+파이프는 경로의 **갯수**를 구하는 것이지        
+해당 지점에 올 수 있는 모든 경우의 갯수를 구하는 것이 아니다.           
+     
+우리는 가능한 파이프를 여러개 **동시에** 설치하는 것을 구하는 것이다.       
+즉, 경우의 수가 아니라 **동시에** 문제를 구하는 것이다.      
+하지만, 동시에라는 작업이 힘들기 때문에 순차적으로 처리한 것일 뿐이다.    
+
+그렇다면 파이프를 놓는 순서는?    
+* 첫번째 파이프를 놓는 위치에 따라 2번째 3번째 파이프가 영향을 받는다.   
+* \
+
+
