--- a/06_그래프ver2.md
+++ b/06_그래프ver2.md
@@ -53,6 +53,110 @@
 
 * 간선의 정보를 객체로 표현하여 리스트에 저장  
 
+# 인접 행렬 
+> 두 정점을 연결하는 간선의 `유무`를 행렬로 표현   
+> 대개, 연결되어 있지 않은 간선은 `0`으로 표현한다.
+
+* V x V 정방 행렬 
+* 행 번호와 열 번호는 그래프의 정점에 대응 
+* 두 정점이 인접되어 있으면 1, 그렇지 않으면 0으로 표현  
+
+**무향 그래프** 
+* i 번째 행의 합 = i번째 열의 합 = ㅍV의 차수  
+
+**유향 그래프**
+* 행 i의 합 - Vi의 진출 차수 
+* 열 i의 합 - Vi의 진입 차수 
+
+즉, 가로에 있는 0이 아닌 수가 나가는 간선
+세로에 있는 0이 아닌 수가 들어오는 간선  
+
+**인접 행렬의 단점은?**    
+`희소 그래프` VS `밀집 그래프`     
+
+* 희소 그래프 :   
+  * 정점은 상대적으로 많고, 간선은 적은 경우   
+  * 간선의 수가 적지만 정점이 많기에 `V*V`의 크기를 만들어야한다
+   
+알고리즘 메모리 제한은 주로, 256/512 로 주어진다.     
+그렇기에 많은 정점을 기준으로 2차원 배열을 만들면? 메모리 초과가 될 확률이 높다.   
+또한, 배열의 크기 + 연산시 사용되는 메모리도 있으니 사용하기는 좋지 않다.  
+
+
+* 밀집 그래프 : 
+  * 정점 간선 비례해서 많은 경우
+  * 간선이 많아도 희소그래프처럼 모든 탐색을 진행하기에 공간만 가능한지 확인하면 된다.  
+
+정리하자면 희소그래프 때는 굳이 인접행렬로 할 필요가 없다.  
+그렇기 때문에 인접리스트로 문제를 풀자  
+  
+# 인접 리스트   
+   
+각 정점에 대한 인접 정점들을 순차적으로 표현        
+하나의 정점에 대한 인접 정점들을 각각 노드로 하는 연결 리스트로 저장     
+이때, 연결 목록 유지를 위한 포인터(링크)가 있다.(관계성 X)    
+       
+ArrayList와 같은 컬렉션을 사용한다면, 속도나 메모리가 조금 오바될 수 있는데       
+이를 `커스텀 Node`로 만들어 직접 구현하면 어떤 경우는 `30%`까지 절약할 수 도 있다.   
+그리고 이러한 경우가 가능한 것은 순서가 상관없기 때문이다.  
+
+**무향 그래프** 
+* 노드 수 : 간선의 수 *2 (A->B, B->A)  
+* 각 정점의 노드수 = 정점의 차수 
+
+**방향 그래프**
+* 노드 수 : 간선의 수 (A -> B)   
+* 각 정점의 노드 수 = 정점의 차수 
+  
+# 간선 리스트 
+두 정점에 대한 간선 그 자체를 객체로 쵸현하여 리스트를 저장
+간선을 표현하는 두 정점 정보를 나타냄 
+
+# 그래프 탐색 
+그래프 순회는 비선형구조인 그래프로 표현된 모든 자료를 빠짐없이 탐색하는 것을 의미한다.   
+
+1. BFS
+2. DFS
+
+## BFS
+너비우선탐색은 탐색 시작점의 인접한 정점들을 먼저 모두 한 차례로 방문한 후에,    
+방문했던 정점을 시작점으로 하여 다시 인접한 정점들을 차례로 방문하는 방식       
+  
+인접한 정점들에 대해 탐색을 한후,  
+차례로 다시 너비우선탐색을 진행해야하므로, 선입선출 형태의 자료구조인 큐를 활용한다.   
+
+### 초기상태   
+* Visited 배열 생성 및 false로 초기화  
+* Queue 생성
+* 시작 정점 방문처리 및 enqueue  
+* 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
