--- a/집합.md
+++ b/집합.md
@@ -31,4 +31,75 @@
 
 즉, 링크를 2개 가지고 있다는 말이다.   
 
-## Make_Set : 
+```java
+package algorithm;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.StringTokenizer;
+
+import static java.lang.Integer.parseInt;
+
+class Solution {
+
+	static int N;
+	static int parents[];
+
+	static void make() {
+		for (int i = 0; i < N; i++) {
+			parents[i] = i;
+		}
+	}
+	
+	static int findSet(int a) {
+		if(parents[a] == a) return a;
+		return parents[a] = findSet(parents[a]);
+	}
+
+	static boolean union(int a, int b) {
+		int aRoot = findSet(a);
+		int bRoot = findSet(b);
+		
+		if(aRoot == bRoot) {return false;}
+		parents[bRoot] = aRoot;
+		return true;
+	}
+	
+	
+	public static void main(String[] args) {
+		N = 5;
+		parents = new int[N];
+		make();
+		
+		System.out.println("==============union==============");
+		System.out.println(union(0, 1));
+		System.out.println(Arrays.toString(parents));
+		System.out.println(union(1, 2));
+		System.out.println(Arrays.toString(parents));
+		System.out.println(union(3, 4));
+		System.out.println(Arrays.toString(parents));
+		System.out.println(union(0, 2));
+		System.out.println(Arrays.toString(parents));
+		System.out.println(union(0, 4));
+		System.out.println(Arrays.toString(parents));
+		
+		
+		System.out.println("==============find==============");
+		System.out.println(findSet(4));
+		System.out.println(Arrays.toString(parents));
+		System.out.println(findSet(3));
+		System.out.println(Arrays.toString(parents));
+		System.out.println(findSet(2));
+		System.out.println(Arrays.toString(parents));
+		System.out.println(findSet(0));
+		System.out.println(Arrays.toString(parents));
+		System.out.println(findSet(1));
+		System.out.println(Arrays.toString(parents));
+	}
+	
+}
+```
